# benchmark-demo-minima

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: methodology.md
examples/: README.md
examples/catalog/: results.json
examples/code/: results.json
examples/dataset/: results.json
examples/hard/: results.json
fixtures/: catalog_matrix.json  code_matrix.json  dataset_matrix.json  hard_matrix.json  ifeval_problems.json  livecode_problems.json  math500_problems.json
src/minima_demo/: __init__.py  baselines.py  catalog.py  catalog_track.py  cli.py  config.py  constants.py  dataset_track.py  metrics.py  orchestrate.py  report.py  runner.py  spec.py
src/minima_demo/providers/: __init__.py  anthropic.py  google.py  openai.py
src/minima_demo/tasks/: __init__.py  code_exec.py  frontier_suite.py  hard_suite.py  ifeval_checks.py  ifeval_suite.py  livecode_suite.py  math500_suite.py  suite.py
